--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,13 @@
-name: Build HTML APK
+name: Build APK
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Web to APK
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Create APK
         uses: darkshredder/website-to-apk-action@v1.1
         with:
-          app-name: "My Cool App"
-          build-folder-path: "./" # Where your index.html is
+          app-name: "MyFirstApp"
+          build-folder-path: "."
